# bazarr-sync-my-subs

./: .gitignore  Initial_Prompt.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
src/bazarr_subsync/: __main__.py  cli.py  constants.py  ffmpeg.py  log.py  preprocess.py  streams.py  sync.py
tests/: test_sync.py
