[project]
name = "bazarr-subsync"
version = "0.1.2"
description = "Bazarr post-processing subtitle synchronizer using alass."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pysubs2>=1.8.1",
]

[project.scripts]
bazarr-subsync = "bazarr_subsync.cli:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
build = [
    "pyinstaller>=6.21.0",
]
dev = [
    "mypy>=2.1.0",
    "pyinstaller>=6.21.0",
    "pyright>=1.1.410",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pysubs2", "pysubs2.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
